<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="Ustawienia ogólne">
    <ListPreference
        android:key="pref_fontsize"
        android:title="@string/pref_fontsize"
        android:summary="@string/pref_fontsize_summ"
        android:dialogTitle="@string/pref_fontsize"
        android:entries="@array/pref_fontsize_entries"
        android:entryValues="@array/pref_fontsize_values"
        android:defaultValue="12"
        />
    <CheckBoxPreference
        android:key="key_opis"
        android:title="@string/pref_opis"
        android:summary="@string/pref_opis_summ"
        android:defaultValue="true"
        />
    <ListPreference
        android:key="pref_sorting"
        android:title="@string/pref_sorting"
        android:summary="@string/pref_sorting_summary"
        android:dialogTitle="@string/pref_sorting"
        android:entries="@array/pref_sorting_entries"
        android:entryValues="@array/pref_sorting_values"
/>
</PreferenceCategory>
    <PreferenceCategory android:title="Bezpieczeństwo">
        <EditTextPreference
            android:key="pref_pass"
            android:title="@string/pref_pass"
            android:summary="@string/pref_pass_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>